# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

source_set("cpu") {
  sources = [
    "barriers.h",
    "instruction.h",
    "interrupt_table.cc",
    "interrupt_table.h",
    "interrupts.h",
    "wait.h",
    "wait.s",
  ]

  deps = [ "//zen" ]
}
