# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

source_set("hw") {
  sources = [
    "arm_timer.h",
    "aux.h",
    "bcm2835.h",
    "gpio.cc",
    "gpio.h",
    "interrupts.h",
    "system_timer.h",
    "mini_uart.h",
  ]

  deps = [
    "//zen",
    "//cpu",
  ]
}
